--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
 		<title> My Web Page</title>
 	</head>
 	<body>
-		Hello, World! Hello again! Hello Hello Hello
+		Hello, World! Hello again! Hello Hi
 	</body>
 </html>
